# arkanoid_clone

./: CMakeLists.txt  arkanoid  ball.c  ball.h  block.c  block.h  checkCollisions.c  checkCollisions.h  collision.c  collision.h  config.h  game.c  game.h  level.c  level.h  main.c  menu.c  menu.h  player.c  player.h  todo.md  tools.c  tools.h  utils.c  utils.h
